--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -23,6 +23,7 @@
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
+		float: right;
 
 		ul {
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
@@ -76,6 +77,17 @@
 	a {
 		display: block;
 		text-decoration: none;
+		display: inline-block;
+		color: #000;
+		font-weight: bolder;
+		text-transform: uppercase;
+		margin: 20px 20px;
+		&:hover {
+			color: darkmagenta;
+		}
+		&:active {
+			color:cornflowerblue;
+		}
 	}
 
 	.current_page_item > a,
