--- a/style.css
+++ b/style.css
@@ -643,6 +643,7 @@ textarea {
   list-style: none;
   margin: 0;
   padding-left: 0;
+  float: right;
 }
 .main-navigation ul ul {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
@@ -673,6 +674,17 @@ textarea {
 .main-navigation a {
   display: block;
   text-decoration: none;
+  display: inline-block;
+  color: #000;
+  font-weight: bolder;
+  text-transform: uppercase;
+  margin: 20px 20px;
+}
+.main-navigation a:hover {
+  color: darkmagenta;
+}
+.main-navigation a:active {
+  color: cornflowerblue;
 }
 /* Small menu. */
 .menu-toggle,
