--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -6,6 +6,8 @@
 --------------------------------------------- */
 @import "content/posts-and-pages";
 @import "content/home-page";
+@import "content/info-section";
+@import "content/page-banner";
 
 /* Comments
 --------------------------------------------- */
