--- a/style.css
+++ b/style.css
@@ -791,6 +791,95 @@ main {
 }
 
 /* This is the end of icon section  */
+/* This is the start of info section  */
+.infoBox {
+  width: 50%;
+  height: 500px;
+  float: left;
+  text-align: center;
+  margin: 30px 0px;
+  /* border: 1px solid #000; */
+}
+
+.infoTextbox {
+  padding: 70px 50px;
+  line-height: 200%;
+}
+
+.info-section:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* This is the end of info section  */
+/* This is the start of the banner section */
+.bannerSection {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  margin: 150px 0px 50px;
+  align-items: center;
+  background-color: #eedbff;
+  border: 1px solid #000;
+}
+
+.bannerImg {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  padding-top: 200px;
+  align-items: center;
+  text-align: center;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://travel-site.local/wp-content/uploads/2022/05/banner-img-scaled.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 10% 10%;
+}
+
+.bannerCopy {
+  width: 800px;
+  color: #fff;
+}
+
+.bannerCopy h3 {
+  font-size: 34px;
+  margin: 10px 0px;
+}
+
+.bannerCopy p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin: 10px 0px;
+}
+
+.bannerBtn {
+  margin: 15px 0px;
+}
+
+.bannerBtn a {
+  padding: 5px 40px;
+  background-color: #fff;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  font-weight: bolder;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+}
+
+.bannerBtn a:hover {
+  background-color: darkmagenta;
+  color: #fff;
+}
+
+.bannerBtn a:active {
+  background-color: cornflowerblue;
+  color: #fff;
+}
+
+/* This is th end of the banner section */
 /* Comments
 --------------------------------------------- */
 .comment-content a {
