--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -1,6 +1,8 @@
 /* Navigation
 --------------------------------------------- */
 @import "navigation/navigation";
+@import "navigation/footer";
+@import "navigation/to-top";
 
 /* Posts and pages
 --------------------------------------------- */
