--- a/style.css
+++ b/style.css
@@ -723,15 +723,102 @@ textarea {
   flex: 1 0 50%;
 }
 
+/* This is the start of footer  */
+footer {
+  width: 100%;
+  height: 200px;
+  background-color: #eedbff;
+}
+
+.footerBox {
+  width: 30%;
+  height: 200px;
+  float: left;
+  margin: 0px 20px;
+  text-align: center;
+  /* border: 1px solid #000; */
+}
+
+.footerBox ul {
+  list-style-type: none;
+  margin-top: 60px;
+}
+
+.footerBox a {
+  text-decoration: none;
+}
+
+.footerBox ul li {
+  color: #000;
+  font-weight: bolder;
+  text-transform: uppercase;
+  margin: 20px 20px;
+}
+
+.footerBox ul li:hover {
+  color: darkmagenta;
+}
+
+.footerBox ul li:active {
+  color: cornflowerblue;
+}
+
+.footerBox p {
+  margin-top: 110px;
+}
+
+.socialMedia {
+  margin-top: 100px;
+}
+
+.socialMedia i {
+  margin: 0px 10px;
+}
+
+.socialMedia i {
+  color: #000;
+}
+
+.socialMedia i:hover {
+  color: darkmagenta;
+}
+
+.socialMedia i:active {
+  color: cornflowerblue;
+}
+
+/* This is the end of footer  */
+/*This is the start of the back to top button  */
+.topButton {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin: 30px;
+}
+
+.topButton a {
+  padding: 8px 15px;
+  background-color: #000;
+  border: 2px solid #000;
+  border-radius: 50px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.topButton a:hover {
+  background-color: darkmagenta;
+}
+
+.topButton a:active {
+  background-color: cornflowerblue;
+}
+
+/* This is the end of the back to top button */
 /* Posts and pages
 --------------------------------------------- */
 .sticky {
   display: block;
-}
-
-.post,
-.page {
-  margin: 0 0 1.5em;
 }
 
 .updated:not(.published) {
