--- a/style.css
+++ b/style.css
@@ -881,7 +881,7 @@ main {
 /* This is the start of info section  */
 .infoBox {
   width: 50%;
-  height: 500px;
+  height: 600px;
   float: left;
   text-align: center;
   margin: 30px 0px;
@@ -967,6 +967,39 @@ main {
 }
 
 /* This is th end of the banner section */
+.form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin: 30px 0;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.contact-form input[type=text] {
+  width: 100%;
+  padding: 10px;
+  background-color: #ffffff;
+  border: 1px solid #ccc !important;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  resize: vertical;
+}
+.contact-form input[type=email], .contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  resize: vertical;
+}
+
 /* Comments
 --------------------------------------------- */
 .comment-content a {
