--- a/style.css
+++ b/style.css
@@ -580,9 +580,8 @@ input[type=datetime-local],
 input[type=color],
 textarea {
   color: #666;
-  border: 1px solid #ccc;
   border-radius: 3px;
-  padding: 3px;
+  padding: 4px;
 }
 input[type=text]:focus,
 input[type=email]:focus,
@@ -601,10 +600,7 @@ input[type=datetime-local]:focus,
 input[type=color]:focus,
 textarea:focus {
   color: #111;
-}
-
-select {
-  border: 1px solid #ccc;
+  border: none;
 }
 
 textarea {
@@ -978,12 +974,20 @@ main {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  padding: 2% 5%;
+  border: 1px solid #000 !important;
+}
+.contact-form label {
+  padding: 5px 0;
 }
 .contact-form input[type=text] {
   width: 100%;
   padding: 10px;
   background-color: #ffffff;
-  border: 1px solid #ccc !important;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #ccc !important;
   border-radius: 4px;
   box-sizing: border-box;
   margin-bottom: 10px;
@@ -993,11 +997,23 @@ main {
   width: 100%;
   padding: 10px;
   background-color: #ffffff;
-  border: 1px solid #ccc;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid #ccc !important;
   border-radius: 4px;
   box-sizing: border-box;
   margin-bottom: 10px;
   resize: vertical;
+}
+.contact-form input[type=submit] {
+  width: 100px;
+  align-self: center;
+  margin-top: 15px;
+  background-color: #e0218a;
+  color: #fff;
+  border-radius: 7px;
+  line-height: 1.2em;
 }
 
 /* Comments
