adding hero images

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -10,6 +10,7 @@
 @import "content/home-page";
 @import "content/info-section";
 @import "content/page-banner";
+@import "content/hero";
 @import "content/contact";
 
 /* Comments
