--- a/style.css
+++ b/style.css
@@ -603,6 +603,10 @@ textarea:focus {
   border: none;
 }
 
+select {
+  border: 1px solid #ccc;
+}
+
 textarea {
   width: 100%;
 }
@@ -963,6 +967,17 @@ main {
 }
 
 /* This is th end of the banner section */
+.hero {
+  margin-top: -2px;
+  width: 100%;
+  height: 50vh;
+  background-color: black;
+}
+.hero img {
+  width: 100%;
+  height: 50vh;
+}
+
 .form {
   width: 100%;
   display: flex;
