--- a/sass/components/content/_contact.scss
+++ b/sass/components/content/_contact.scss
@@ -1,57 +1,84 @@
-.form {
+.contact-section {
     width:100%;
     display: flex;
+    margin: 10% 0 0 0;
+}
+
+.contact-column {
+    width: 50%;
+    display: flex;
     align-items: center;
-    margin: 30px 0;
+    
+    ul {
+       margin-right: 10%;
+       
+       li {
+           list-style-type: none;
+           line-height: 3em;
+       }
+    }
 }
 
 .contact-form {
     display: flex;
     flex-direction: column;
-    margin: 0 auto; 
-    padding: 2% 5%;
-    border: 1px solid #000 !important;
-    label {
-        padding: 5px 0;
-    }
+    align-items: center;
 
-    input[type="text"]{
-        width: 100%;
-        padding: 10px;
-        background-color: #ffffff;
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        border-bottom: 1px solid #ccc !important;
-        border-radius: 4px;
-        box-sizing: border-box;
-        margin-bottom: 10px;
-        resize: vertical;
+    .form-content {
+        width: 80%;
+        margin: 0 auto; 
+        padding: 2% 5%;
+        border: 1px solid #000 !important;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        h2 {
+            text-align: center;
+        }
+
+        label {
+            padding: 5px 0;
+        }
+    
+        input[type="text"]{
+            width: 100%;
+            padding: 10px;
+            background-color: #ffffff;
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            border-bottom: 1px solid #ccc !important;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-bottom: 10px;
+            resize: vertical;
+            
+        }
         
+        input[type="email"], textarea{
+            width: 100%;
+            padding: 10px;
+            background-color: #ffffff;
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            border-bottom: 1px solid #ccc !important;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-bottom: 10px;
+            resize: vertical;
+            
+        }
+    
+        input[type="submit"] {
+            display: flex;
+            width: fit-content;
+            margin: 0 auto !important;
+            background-color: #e0218a;
+            color: #fff;
+            padding: 10px;
+            border-radius: 7px;
+            line-height: 1.2em;
+            text-align: center !important;
+        }
     }
     
-    input[type="email"], textarea{
-        width: 100%;
-        padding: 10px;
-        background-color: #ffffff;
-        border-top: none;
-        border-left: none;
-        border-right: none;
-        border-bottom: 1px solid #ccc !important;
-        border-radius: 4px;
-        box-sizing: border-box;
-        margin-bottom: 10px;
-        resize: vertical;
-        
-    }
-
-    input[type="submit"] {
-        width: 100px;
-        align-self: center;
-        margin-top: 15px;
-        background-color: #e0218a;
-        color: #fff;
-        border-radius: 7px;
-        line-height: 1.2em;
-    }
 }
