--- a/style.css
+++ b/style.css
@@ -970,32 +970,52 @@ main {
 .hero {
   margin-top: -2px;
   width: 100%;
-  height: 50vh;
+  height: 90vh;
   background-color: black;
 }
 .hero img {
   width: 100%;
-  height: 50vh;
+  height: 90vh;
 }
 
-.form {
+.contact-section {
   width: 100%;
   display: flex;
+  margin: 10% 0 0 0;
+}
+
+.contact-column {
+  width: 50%;
+  display: flex;
   align-items: center;
-  margin: 30px 0;
+}
+.contact-column ul {
+  margin-right: 10%;
+}
+.contact-column ul li {
+  list-style-type: none;
+  line-height: 3em;
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+.contact-form .form-content {
+  width: 80%;
   margin: 0 auto;
   padding: 2% 5%;
   border: 1px solid #000 !important;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-.contact-form label {
+.contact-form .form-content h2 {
+  text-align: center;
+}
+.contact-form .form-content label {
   padding: 5px 0;
 }
-.contact-form input[type=text] {
+.contact-form .form-content input[type=text] {
   width: 100%;
   padding: 10px;
   background-color: #ffffff;
@@ -1008,7 +1028,7 @@ main {
   margin-bottom: 10px;
   resize: vertical;
 }
-.contact-form input[type=email], .contact-form textarea {
+.contact-form .form-content input[type=email], .contact-form .form-content textarea {
   width: 100%;
   padding: 10px;
   background-color: #ffffff;
@@ -1021,14 +1041,16 @@ main {
   margin-bottom: 10px;
   resize: vertical;
 }
-.contact-form input[type=submit] {
-  width: 100px;
-  align-self: center;
-  margin-top: 15px;
+.contact-form .form-content input[type=submit] {
+  display: flex;
+  width: fit-content;
+  margin: 0 auto !important;
   background-color: #e0218a;
   color: #fff;
+  padding: 10px;
   border-radius: 7px;
   line-height: 1.2em;
+  text-align: center !important;
 }
 
 /* Comments
