--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -12,6 +12,7 @@
 @import "content/page-banner";
 @import "content/hero";
 @import "content/contact";
+@import "content/two-column";
 
 /* Comments
 --------------------------------------------- */
