--- a/sass/components/content/_contact.scss
+++ b/sass/components/content/_contact.scss
@@ -15,6 +15,10 @@
        li {
            list-style-type: none;
            line-height: 3em;
+
+           .fa-solid {
+               color: #e0218a;
+           }
        }
     }
 }
