--- a/sass/components/content/_hero.scss
+++ b/sass/components/content/_hero.scss
@@ -1,9 +1,8 @@
 .hero {
-    margin-top: -2px;
     width: 100%;
     height: 90vh;
     background-color: black;
-
+    margin-bottom: 5px;
     img {
         width: 100%;
         height:90vh;
