--- a/sass/components/content/_two-column.scss
+++ b/sass/components/content/_two-column.scss
@@ -1,2 +1,22 @@
+.two-row {
+    display: flex;
+}
 
+.two-column {
+    flex: 1;
+    padding: 5%;
+}
 
+div .two-column:nth-of-type(even) {
+    flex: 3;
+}
+
+div .two-column:nth-of-type(odd) {
+    background-color: #eedbff;
+}
+
+.portait-img {
+    max-width: 100%;
+    //height: 800px;
+    
+}
