--- a/style.css
+++ b/style.css
@@ -972,10 +972,10 @@ main {
 
 /* This is th end of the banner section */
 .hero {
-  margin-top: -2px;
   width: 100%;
   height: 90vh;
   background-color: black;
+  margin-bottom: 5px;
 }
 .hero img {
   width: 100%;
@@ -1058,6 +1058,27 @@ main {
   border-radius: 7px;
   line-height: 1.2em;
   text-align: center !important;
+}
+
+.two-row {
+  display: flex;
+}
+
+.two-column {
+  flex: 1;
+  padding: 5%;
+}
+
+div .two-column:nth-of-type(even) {
+  flex: 3;
+}
+
+div .two-column:nth-of-type(odd) {
+  background-color: #eedbff;
+}
+
+.portait-img {
+  max-width: 100%;
 }
 
 /* Comments
