--- a/sass/components/content/_hero.scss
+++ b/sass/components/content/_hero.scss
@@ -1,11 +1,25 @@
-.hero {
+/* This is the start of hero section  */
+main{
     width: 100%;
-    height: 90vh;
+    height: 500px;
     background-color: black;
-    margin-bottom: 5px;
+    background:linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
     img {
         width: 100%;
-        height:90vh;
+        height: 500px;
+        background-size:contain;
+        background-position: center;
+        background-repeat: no-repeat;
     }
     
 }
+
+.hero-text{
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+/* This is the end of hero section  */
