--- a/style.css
+++ b/style.css
@@ -840,27 +840,6 @@ footer {
   margin: 0 0 1.5em;
 }
 
-/* This is the start of hero section  */
-main {
-  width: 100%;
-  height: 500px;
-  background-color: blue;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("https://travel-site.local/wp-content/uploads/2022/05/heroimg-scaled.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.hero-text {
-  color: #fff;
-  text-align: center;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-/* This is the end of hero section  */
 /* This is the start of icon section  */
 .row {
   margin: 20px 20px;
@@ -971,17 +950,31 @@ main {
 }
 
 /* This is th end of the banner section */
-.hero {
+/* This is the start of hero section  */
+main {
   width: 100%;
-  height: 90vh;
+  height: 500px;
   background-color: black;
-  margin-bottom: 5px;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
-.hero img {
+main img {
   width: 100%;
-  height: 90vh;
+  height: 500px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
+.hero-text {
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* This is the end of hero section  */
 .contact-section {
   width: 100%;
   display: flex;
