--- a/style.css
+++ b/style.css
@@ -750,20 +750,20 @@ footer {
 
 .footerBox a {
   text-decoration: none;
+  color: #000;
 }
 
 .footerBox ul li {
-  color: #000;
   font-weight: bolder;
   text-transform: uppercase;
   margin: 20px 20px;
 }
 
-.footerBox ul li:hover {
+.footerBox a:hover {
   color: darkmagenta;
 }
 
-.footerBox ul li:active {
+.footerBox a:active {
   color: cornflowerblue;
 }
 
@@ -955,12 +955,12 @@ main {
   width: 100%;
   height: 500px;
   background-color: black;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+  filter: grayscale(30%);
 }
 main img {
   width: 100%;
   height: 500px;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
