adding style to blog page template

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -13,6 +13,7 @@
 @import "content/hero";
 @import "content/contact";
 @import "content/two-column";
+@import "content/blog-page";
 
 /* Comments
 --------------------------------------------- */
