--- a/sass/components/content/_blog-page.scss
+++ b/sass/components/content/_blog-page.scss
@@ -1,11 +1,12 @@
 .container {
     display: flex;
     width: 100%;
-    margin: 3rem;
+    margin: 0 auto;
+    align-items: center;
     flex-wrap: wrap;
     .card {
         width: calc(30% - 30px);
-        margin: 30px;
+        margin: 0 auto;
         h2 {
             font-style: italic;
             text-align: center;
