--- a/style.css
+++ b/style.css
@@ -1078,12 +1078,13 @@ div .two-column:nth-of-type(odd) {
 .container {
   display: flex;
   width: 100%;
-  margin: 3rem;
+  margin: 0 auto;
+  align-items: center;
   flex-wrap: wrap;
 }
 .container .card {
   width: calc(30% - 30px);
-  margin: 30px;
+  margin: 0 auto;
 }
 .container .card h2 {
   font-style: italic;
