--- a/sass/components/content/_blog-page.scss
+++ b/sass/components/content/_blog-page.scss
@@ -1,12 +1,13 @@
 .container {
     display: flex;
     width: 100%;
-    margin: 0 auto;
+    //margin: 30px;
     align-items: center;
     flex-wrap: wrap;
     .card {
         width: calc(30% - 30px);
         margin: 0 auto;
+        padding: 30px 0;
         h2 {
             font-style: italic;
             text-align: center;
