--- a/style.css
+++ b/style.css
@@ -730,13 +730,13 @@ textarea {
 /* This is the start of footer  */
 footer {
   width: 100%;
-  height: 200px;
+  height: 250px;
   background-color: #eedbff;
 }
 
 .footerBox {
   width: 30%;
-  height: 200px;
+  height: 250px;
   float: left;
   margin: 0px 20px;
   text-align: center;
@@ -1078,13 +1078,13 @@ div .two-column:nth-of-type(odd) {
 .container {
   display: flex;
   width: 100%;
-  margin: 0 auto;
   align-items: center;
   flex-wrap: wrap;
 }
 .container .card {
   width: calc(30% - 30px);
   margin: 0 auto;
+  padding: 30px 0;
 }
 .container .card h2 {
   font-style: italic;
