adding archive template

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -14,6 +14,7 @@
 @import "content/contact";
 @import "content/two-column";
 @import "content/blog-page";
+@import "content/archive-template";
 
 /* Comments
 --------------------------------------------- */
