modifying single.php

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -15,6 +15,7 @@
 @import "content/two-column";
 @import "content/blog-page";
 @import "content/archive-template";
+@import "content/single-template";
 
 /* Comments
 --------------------------------------------- */
