--- a/sass/components/content/_hero.scss
+++ b/sass/components/content/_hero.scss
@@ -1,7 +1,7 @@
 /* This is the start of hero section  */
 main{
     width: 100%;
-    height: 500px;
+    //height: 500px;
     background-color: black;
     filter: grayscale(30%);
     img {
