--- a/style.css
+++ b/style.css
@@ -954,7 +954,6 @@ footer {
 /* This is the start of hero section  */
 main {
   width: 100%;
-  height: 500px;
   background-color: black;
   filter: grayscale(30%);
 }
@@ -1120,6 +1119,22 @@ div .two-column:nth-of-type(odd) {
 
 .moreBtn a:active {
   background-color: cornflowerblue;
+}
+
+.bg-white {
+  background-color: #fff;
+}
+
+.single-row {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 30px;
+}
+.single-row aside {
+  width: 40%;
+}
+.single-row article {
+  width: 60%;
 }
 
 /* Comments
